version/0.31/_sources/api/solver/_autosummary/settings/minor_gridlines.rst.txt
:orphan:

.. _minor_gridlines:

minor_gridlines
===============

.. autoclass:: ansys.fluent.core.generated.solver.settings_251.minor_gridlines
    :show-inheritance:

.. rubric:: Attributes

======================   ================================

Attribute                                         Summary

======================   ================================
:ref:`color <color>`          Color of gridlines on axis.

:ref:`weight <weight>`       Weight of gridlines on axis.

======================   ================================

.. rubric:: Included in:

================   ======================

Parent                            Summary

================   ======================
:ref:`x_1 <x_1>`       X-axis properties.

:ref:`y_1 <y_1>`       Y-axis properties.

================   ======================

