version/0.34/_sources/api/solver/_autosummary/settings/minor_gridlines.rst.txt
:orphan:

.. _minor_gridlines:

minor_gridlines
===============

.. autoclass:: ansys.fluent.core.generated.solver.settings_252.minor_gridlines
    :show-inheritance:

.. rubric:: Attributes

==============================================   =======================================================================================================

Attribute                                                                                                                                        Summary

==============================================   =======================================================================================================
:ref:`color <color>`                                                                                                         Color of gridlines on axis.

:ref:`weight <weight_1>`                                                                                                    Weight of gridlines on axis.

:ref:`auto_placement <auto_placement>`                                                    Specifies whether placement of gridlines on axis is automatic.

:ref:`units_or_divisions <units_or_divisions>`       Specifies whether you want to specify the no. of divisions on the axis made by the major gridlines.

:ref:`distance <distance>`                                                                                          The gridlines placement on the axis.

==============================================   =======================================================================================================

.. rubric:: Included in:

================   ======================

Parent                            Summary

================   ======================
:ref:`x_6 <x_6>`       X-axis properties.

:ref:`y_6 <y_6>`       Y-axis properties.

================   ======================

